# midigeneration

./: .gitignore  README.md  main.py  midi.py  pyproject.toml  run_tests.py
config/: classical_string_quartet.json  jazz_config.json  simple_ballad_config.json  universal_template.json
docs/: JAZZ_VARIATIONS_GUIDE.md  MOTIF_STRUCTURE_GUIDE.md  README.md  UNIVERSAL_SYSTEM_GUIDE.md
src/: __init__.py  midi.py
test/: __init__.py  test_midi.py
utils/: midi_analyzer.py  midi_inspector.py
